force-app/main/default/objects/Account_Planning__c/Account_Planning__c.object-meta.xml
<CustomObject>
    <description>This new object / related list will be the place in which school &amp;/or lender CMs will post annual account plans.</description>
    <label>Account Planning</label>
    <nameField>
        <label>Account Plan Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Planning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>