force-app/main/default/objects/Account_Planning__c/fields/Account_Lead_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the person responsible for leading the Account Plan.</description>
    <inlineHelpText>This field contains the person responsible for leading the Account Plan.</inlineHelpText>
    <label>Account Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N60000001Y74OEAS</relationshipName>
    <type>Lookup</type>
</CustomField>