force-app/main/default/objects/Account_Planning__c/fields/Account_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field displays the current account for which the plan is being reported.</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N60000001Y5A0EAK</relationshipName>
    <type>Lookup</type>
</CustomField>