force-app/main/default/objects/Account_Planning__c/fields/Account_Owner_Client_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Client_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows the name of the Client Manager for this account.</description>
    <inlineHelpText>This field contains the name of the School Client Manager for this account.</inlineHelpText>
    <label>Account Owner/Client Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N60000001Y3PlEAK</relationshipName>
    <type>Lookup</type>
</CustomField>