force-app/main/default/objects/Account_Planning__c/fields/ASA_Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>ASA_Customer_Since__c</fullName>
    <inlineHelpText>This field shows when this customer began doing business with ASA.</inlineHelpText>
    <label>ASA Customer Since</label>
    <length>15</length>
    <type>Text</type>
</CustomField>