force-app/main/default/objects/Account_Planning__c/fields/Campus_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Campus_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campus Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Planning</relationshipName>
    <type>Lookup</type>
</CustomField>