force-app/main/default/objects/Account_Planning__c/fields/CM_G1_Tactic_2nd__c.field-meta.xml
<CustomField>
    <fullName>CM_G1_Tactic_2nd__c</fullName>
    <description>This field contains an additional tactic for the strategy of the goal being reported.</description>
    <inlineHelpText>This field contains an additional tactic for the strategy of the goal being reported.</inlineHelpText>
    <label>2nd Tactic</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>