force-app/main/default/objects/Account_Planning__c/fields/CM_G2_1st_Tactic__c.field-meta.xml
<CustomField>
    <fullName>CM_G2_1st_Tactic__c</fullName>
    <description>This field contains the tactic to support the strategy for the goal being reported.</description>
    <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
    <label>1st Tactic</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>