force-app/main/default/objects/Account_Planning__c/fields/CM_G2_3rd_Tactic__c.field-meta.xml
<CustomField>
    <fullName>CM_G2_3rd_Tactic__c</fullName>
    <description>This field contains an additional tactic to support the strategy for the goal being reported.</description>
    <inlineHelpText>This field contains an additional tactic to support the strategy for the goal being reported.</inlineHelpText>
    <label>3rd Tactic</label>
    <type>TextArea</type>
</CustomField>