force-app/main/default/objects/Account_Planning__c/fields/Comms_External__c.field-meta.xml
<CustomField>
    <fullName>Comms_External__c</fullName>
    <description>This field contains the strategy used to integrate a communication plan that works for all parties. 
Communications - External</description>
    <inlineHelpText>This field contains the strategy used to integrate a communication plan that works for all parties.</inlineHelpText>
    <label>Comms External</label>
    <type>TextArea</type>
</CustomField>