force-app/main/default/objects/Account_Planning__c/fields/Comms_External_Strategy_2__c.field-meta.xml
<CustomField>
    <fullName>Comms_External_Strategy_2__c</fullName>
    <description>This field contains the strategy used to integrate a communication plan that works for all parties.
Communications - External</description>
    <inlineHelpText>This field contains the strategy used to integrate a communication plan that works for all parties.

Calls, face to face visits, email ASA communications, etc.</inlineHelpText>
    <label>Customer Comms - External Strategy</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>