force-app/main/default/objects/Account_Planning__c/fields/Comms_Internal_2nd_tactic__c.field-meta.xml
<CustomField>
    <fullName>Comms_Internal_2nd_tactic__c</fullName>
    <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
    <label>2nd tactic</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>