force-app/main/default/objects/Account_Planning__c/fields/Comms_Internal_3rd_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Comms_Internal_3rd_Tactic__c</fullName>
    <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
    <label>3rd Tactic</label>
    <type>TextArea</type>
</CustomField>