force-app/main/default/objects/Account_Planning__c/fields/Comms_Internal__c.field-meta.xml
<CustomField>
    <fullName>Comms_Internal__c</fullName>
    <description>This field will contain the goal which is specific to the Communications plan for Internal parties.</description>
    <inlineHelpText>This field will contain the goal which is specific to the Communications plan for Internal parties.

What is important that we share? To whom?, How often?, What mode?</inlineHelpText>
    <label>Communications Internal</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>