force-app/main/default/objects/Account_Planning__c/fields/CSA_Rep__c.field-meta.xml
<CustomField>
    <fullName>CSA_Rep__c</fullName>
    <description>This field contains either the name or the extension of the Client Services Associate who supports this account.</description>
    <inlineHelpText>This field contains either the name or the extension of the Client Services Associate who supports this account.</inlineHelpText>
    <label>CSA Rep</label>
    <length>25</length>
    <type>Text</type>
</CustomField>