force-app/main/default/objects/Account_Planning__c/fields/Goal_1__c.field-meta.xml
<CustomField>
    <fullName>Goal_1__c</fullName>
    <label>Goal 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>