force-app/main/default/objects/Account_Planning__c/fields/Goal_2__c.field-meta.xml
<CustomField>
    <fullName>Goal_2__c</fullName>
    <label>Goal 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>