force-app/main/default/objects/Account_Planning__c/fields/Goal_3__c.field-meta.xml
<CustomField>
    <fullName>Goal_3__c</fullName>
    <label>Goal 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>