force-app/main/default/objects/Account_Planning__c/fields/Key_Information__c.field-meta.xml
<CustomField>
    <fullName>Key_Information__c</fullName>
    <description>This field contains all of the key information for this account.</description>
    <inlineHelpText>This field contains all of the key information for this account.</inlineHelpText>
    <label>Key Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>