force-app/main/default/objects/Account_Planning__c/fields/OE_Code__c.field-meta.xml
<CustomField>
    <fullName>OE_Code__c</fullName>
    <description>This field contains the OE Code of the Account for which this plan is being reported.</description>
    <inlineHelpText>This field contains the OE Code of the Account for which this plan is being reported.</inlineHelpText>
    <label>OE Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>