force-app/main/default/objects/Account_Planning__c/fields/Optional_Goal__c.field-meta.xml
<CustomField>
    <fullName>Optional_Goal__c</fullName>
    <description>This field will contain the goal which is specific to the Client Manager and is optional.</description>
    <inlineHelpText>This field will contain the goal which is specific to the Client Manager and is optional.
What is important that we share? To whom?, How often?, What mode?</inlineHelpText>
    <label>Optional Goal</label>
    <type>TextArea</type>
</CustomField>