force-app/main/default/objects/Account_Planning__c/fields/Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Plan_Summary__c</fullName>
    <description>This field contains the summary information of the plan for this account</description>
    <inlineHelpText>This field contains the summary information of the plan for this account.  

REMINDER: Please complete this section last.</inlineHelpText>
    <label>Plan Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>