force-app/main/default/objects/Account_Planning__c/fields/Process_Opp_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Process_Opp_Strategy__c</fullName>
    <inlineHelpText>This field contains the strategy for the goal: Process Opportunity</inlineHelpText>
    <label>Process Opportunity Strategy</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>