force-app/main/default/objects/Account_Planning__c/fields/Prods_Services_del__c.field-meta.xml
<CustomField>
    <fullName>Prods_Services_del__c</fullName>
    <description>This field contains the strategy used to determine what Products &amp; Services an account is interested in using.</description>
    <inlineHelpText>This field contains the strategy used to determine what Products &amp; Services an account is interested in using.</inlineHelpText>
    <label>Prods Services</label>
    <type>TextArea</type>
</CustomField>