force-app/main/default/objects/Account_Planning__c/fields/Prods_Svcs_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Prods_Svcs_Strategy__c</fullName>
    <description>This field contains the strategy used to determine what Products &amp; Services an account is interested in using.
Prods and Svcs</description>
    <inlineHelpText>This field contains the strategy used to determine what Products &amp; Services an account is interested in using.</inlineHelpText>
    <label>Products and Services Strategy</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>