force-app/main/default/objects/Account_Planning__c/fields/regional_account_executive__c.field-meta.xml
<CustomField>
    <fullName>regional_account_executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the Regional Account Executive responsible for this account.</description>
    <inlineHelpText>This field contains the Regional Account Executive responsible for this account.</inlineHelpText>
    <label>Regional Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N60000001Y3PqEAK</relationshipName>
    <type>Lookup</type>
</CustomField>