force-app/main/default/objects/Account_Planning__c/fields/S_W_O_T_T__c.field-meta.xml
<CustomField>
    <fullName>S_W_O_T_T__c</fullName>
    <description>This field contains all of the information for:
Strengths, Weaknesses, Opportunities, Threats and Trends</description>
    <inlineHelpText>This field contains all of the information for:
Strengths, Weaknesses, Opportunities, Threats and Trends</inlineHelpText>
    <label>S.W.O.T.T.</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>