force-app/main/default/objects/Account_Planning__c/fields/SALT_Contract_Executed__c.field-meta.xml
<CustomField>
    <fullName>SALT_Contract_Executed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field pulls in the SALT Contract Executed date from the account.</description>
    <label>SALT Contract Executed</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Planning (SALT_Contract_Executed__c)</relationshipLabel>
    <relationshipName>Account_Planning</relationshipName>
    <type>Lookup</type>
</CustomField>