force-app/main/default/objects/Account_Planning__c/fields/SLP_Strategy__c.field-meta.xml
<CustomField>
    <fullName>SLP_Strategy__c</fullName>
    <description>This field contains the strategy for goal: Strategic Lender Services</description>
    <inlineHelpText>This field contains the strategy for goal: Strategic Lender Services</inlineHelpText>
    <label>SLP Strategy</label>
    <type>TextArea</type>
</CustomField>