force-app/main/default/objects/Account_Planning__c/fields/SLS_Internal_Strategy__c.field-meta.xml
<CustomField>
    <fullName>SLS_Internal_Strategy__c</fullName>
    <inlineHelpText>This field contains the strategy for goal: Strategic Lender Services</inlineHelpText>
    <label>SLS Strategy</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>