force-app/main/default/objects/Account_Planning__c/fields/Vol_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Vol_Strategy__c</fullName>
    <label>Vol Strategy</label>
    <type>TextArea</type>
</CustomField>