force-app/main/default/objects/Account_Planning__c/fields/Volume_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Volume_Strategy__c</fullName>
    <description>This field contains the strategy used to determine if the account will result in an opportunity for New/Additional or retention of volume.</description>
    <inlineHelpText>This field contains the strategy used to determine if the account will result in an opportunity for New/Additional or retention of volume.</inlineHelpText>
    <label>Volume Strategy</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>