force-app/main/default/objects/Account_Planning__c/fields/Why_client_initially_chose_SALT__c.field-meta.xml
<CustomField>
    <fullName>Why_client_initially_chose_SALT__c</fullName>
    <description>This field contains text which describes why this school/lender initially chose to work with ASA.</description>
    <inlineHelpText>This field contains text which describes why this school/lender initially chose to work with ASA.</inlineHelpText>
    <label>Why client initially chose SALT</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>