force-app/main/default/objects/Account_Planning__c/fields/X1st_Quarter_Check_in__c.field-meta.xml
<CustomField>
    <fullName>X1st_Quarter_Check_in__c</fullName>
    <label>1st Quarter Check-in</label>
    <type>Date</type>
</CustomField>