force-app/main/default/objects/Account_Planning__c/fields/X2nd_Quarter_Check_in__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Quarter_Check_in__c</fullName>
    <label>2nd Quarter Check-in</label>
    <type>Date</type>
</CustomField>