force-app/main/default/objects/Account_Planning__c/fields/X2nd_Tactic_BD_5_2__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Tactic_BD_5_2__c</fullName>
    <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
    <label>2nd Tactic</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>