force-app/main/default/objects/Account_Planning__c/fields/X3rd_Quarter_Check_in__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Quarter_Check_in__c</fullName>
    <label>3rd Quarter Check-in</label>
    <type>Date</type>
</CustomField>