force-app/main/default/objects/Account_Planning__c/fields/X3rd_Tactic_BD_3_3__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Tactic_BD_3_3__c</fullName>
    <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
    <label>3rd Tactic</label>
    <type>TextArea</type>
</CustomField>