force-app/main/default/objects/Account_Planning__c/fields/Year_End_Review__c.field-meta.xml
<CustomField>
    <fullName>Year_End_Review__c</fullName>
    <label>Year End Review</label>
    <type>Date</type>
</CustomField>