force-app/main/default/objects/Account_Planning__c/recordTypes/AccountPlanFY09.recordType-meta.xml
<RecordType>
    <fullName>AccountPlanFY09</fullName>
    <active>true</active>
    <label>Account Plan FY 09</label>
</RecordType>