force-app/main/default/objects/Account_Planning__c/listViews/All_2009_Account_Plans.listView-meta.xml
<ListView>
    <fullName>All_2009_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account_Name_2__c</columns>
    <columns>OE_Code__c</columns>
    <columns>regional_account_executive__c</columns>
    <columns>Account_Owner_Client_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2009</value>
    </filters>
    <label>All 2009 Account Plans</label>
</ListView>