force-app/main/default/objects/Account_Planning__c/listViews/AllAccountPlans.listView-meta.xml
<ListView>
    <fullName>AllAccountPlans</fullName>
    <columns>Account_Name_2__c</columns>
    <columns>NAME</columns>
    <columns>regional_account_executive__c</columns>
    <columns>Account_Owner_Client_Manager__c</columns>
    <columns>CSA_Rep__c</columns>
    <columns>Account_Lead_del__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Plans</label>
</ListView>